<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="TcoEvaluateMeasurementConfig" Id="{db3730ff-3360-0177-3d04-45649e94a02c}">
    <Declaration><![CDATA[{attribute wpf [Container(Layout.Stack)]}
{attribute wpf [Group(Layout.GroupBox)]}
TYPE TcoEvaluateMeasurementConfig : STRUCT
    {attribute wpf [Container(Layout.Stack, "FILTER")]}
    FilterValue : INT;
    {attribute wpf [Container(Layout.Stack, "SEARCH RANGE")]}
    SearchRange : INT;
    {attribute wpf [Container(Layout.Stack, "PEAK NOISE")]}
    PeaksNoise : REAL;
    {attribute wpf [Container(Layout.Stack, "TRIGGER NOISE")]}
    TriggerNoise : REAL;
    {attribute wpf [Container(Layout.Stack, "SMOOT FACTOR")]}
    SmoothFactor : REAL;
    {attribute wpf [Container(Layout.Stack, "NUMBER OF SAMPLES TO IGNORE - START")]}
    IgnoreSamplesFromStart : INT;
    {attribute wpf [Container(Layout.Stack, "NUMBER OF SAMPLES TO IGNORE - END")]}
    IgnoreSamplesFromEnd : INT;
    {attribute wpf [Container(Layout.Stack, "IGNORE ZERO VALUES - TIME BASE")]}
    IgnoreZeroSamplesIfTimeBase : BOOL;
    {attribute wpf [Container(Layout.Stack, "IGNORE ZERO VALUES - DISTANCE")]}
    IgnoreZeroSamplesIfDistance : BOOL;
    {attribute wpf [Container(Layout.Stack, "MAX FOUND LIMIT EXTREMS (MAX 100)(PROCES DATA ROW)")]}
    LimitIndexFoundExtrems : INT;
    {attribute wpf [Container(Layout.Stack, "MAX FOUND LIMIT TRIGGERS (MAX 100) (DISCRETE DATA ROW)")]}
    LimitIndexFoundTriggers : INT;
    {attribute wpf [Container(Layout.Stack, "PROCESS VALUE ROW NAME")]}
    ProcessValueRowName : STRING;
    {attribute wpf [Container(Layout.Stack, "DISCRETE VALUE ROW NAME")]}
    DiscreteValueRowName : STRING;
    {attribute wpf [Container(Layout.Stack, "EXPORT RAW DATA LOCATION")]}
    ExportRawLocation : STRING(255);
    {attribute wpf [Container(Layout.Stack, "EXPORT RESULTS LOCATION")]}
    ExportResultsLocation : STRING(255);
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>